name:                toydb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/toydb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable toydb
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
      Database.Syntax
      Database.Lexer
      Database.Parser
      Database.Repl
      Database.Main
      Database.BTree
      Database.BPlusTree      
      Database.BPTreeView
  build-depends:       
      base >= 4.7 && < 5
    , text
    , parsec
    , haskeline 
    , containers
      
library
  exposed-modules:
      Database.Main
      Database.Syntax
      Database.BTree
      Database.BPlusTree
      Database.Serialize
      Database.Parser
      Database.Lexer
      Database.Repl
      Database.BPTreeView
  hs-source-dirs:
      src
  default-extensions:
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -fno-warn-unused-binds -fno-warn-unused-do-bind -fno-warn-unused-imports -fno-warn-type-defaults -ferror-spans
  build-depends:
    base <5 && >=4
    , containers >=0.4.0.0
    , text >=1.2.4.0
    , parsec >=3.1.14.0
    , ghc >=8.8.4
    , haskeline
  
  default-language: Haskell2010

test-suite database-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Database.BTreeSpec
      Database.BPlusTreeSpec
      Database.SerializeSpec
      Database.ParserSpec
      Database.MainSpec
  hs-source-dirs:
      test
  ghc-options:
  build-depends:
      QuickCheck >=2.9
    , base <5 && >=3
    , hspec
    , hspec-discover
    , toydb >=0.1.0.0
    , parsec
    , containers
  default-language: Haskell2010
